    ** fixed numerous gc deadlocks introduced in the pthread merge
    ** bug fix: fixed thread safety issues in read and print
    ** bug fix: debugger doesn't hang on session lock if interrupted at
       an inappropriate moment
    ** bug fix: run-program is now thread safe(r)
    ** bug fix: inner with-recursive-lock no longer releases the mutex
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** TYPE-ERRORs from signalled by COERCE now have DATUM and
       EXPECTED-TYPE slots filled.
    ** MULTIPLE-VALUE-SETQ always returns the primary value of the
       values form.
    ** MAKE-CONDITION accepts classes as type-designators.
    ** COMPILE may never return NIL.

changes in sbcl-0.9.2 relative to sbcl-0.9.1:
  * numerous signal handling fixes to increase stability
  * Support for EUC-JP external format.  (thanks to NIIMI Satoshi)
  * minor incompatible change: we now correctly canonize default
    initargs, making them be a list of (INITARG INITFORM INITFUNCTION)
    as per the MOP, rather than the historical (INITARG INITFUNCTION
    INITFORM).  (reported by Bruno Haible)
  * new feature: WITH-COMPILATION-UNIT now accepts a non-standard
    :SOURCE-PLIST option. See (DOCUMENTATION #'WITH-COMPILATION-UNIT T)
    for more information.
  * TRUENAME and PROBE-FILE now correctly resolve symlinks even if the
    pathname is a directory pathname.
  * SB-SPROF now works (more) reliably on non-GENCGC platforms.
  * dynamic space size on PPC has been increased to 768Mb. (thanks to
    Cyrus Harmon)
  * SB-MOP:ENSURE-CLASS-USING-CLASS now accepts a class as the
    :METACLASS argument in addition to a class name.  (reported by
    Bruno Haible for CMUCL, patch for CMUCL by Gerd Moellmann)
  * RESTART-CASE can now be wrapped around CALL-METHOD forms.
    (reported by Bruno Haible; patch from Gerd Moellmann)
  * bug fix: sbcl runtime can now be compiled with gcc4 (thanks to 
    Sascha Wilde)