@@ -34,6 +34,7 @@ changes in sbcl-0.9.3 relative to sbcl-0.9.2:
        an inappropriate moment
     ** bug fix: run-program is now thread safe(r)
     ** bug fix: inner with-recursive-lock no longer releases the mutex
+  * fixed a bug in (DECODE-UNIVERSAL-TIME 0) (reported by Paul Dietz)
   * fixed some bugs revealed by Paul Dietz' test suite:
     ** TYPE-ERRORs from signalled by COERCE now have DATUM and
        EXPECTED-TYPE slots filled.
@@ -41,6 +42,8 @@ changes in sbcl-0.9.3 relative to sbcl-0.9.2:
        values form.
     ** MAKE-CONDITION accepts classes as type-designators.
     ** COMPILE may never return NIL.
+    ** ENCODE-UNIVERSAL-TIME now guards against times out of Unix's
+       range before calling Unix time functions
 
 changes in sbcl-0.9.2 relative to sbcl-0.9.1:
   * numerous signal handling fixes to increase stability
